tests/errors/generic_type_missing_args.dang
# Generic type used without type arguments in type position

type Box[a] {
  pub value: a
}

pub b: Box! = Box(1)
